# OCR-Table

./: .gitignore  README.md  app.py  check_ocr_backend.py  debug_paddleocr_image.py  demo.py  evaluate_pipeline.py  pyproject.toml  requirements.txt  train_structure_model.py
configs/: default.yaml  full_pipeline.yaml  lightweight.yaml
data/: README.md  remote_manifest_example.jsonl
docs/: README_vi.md  design_vi.md  full_model_design_vi.md  github_guide_vi.md  model_design_vi.md  ocr_setup_vi.md  project_guide_vi.md  remote_dataset_training_vi.md  running_and_tuning_vi.md  train_structure_model_vi.md  training_vi.md  tuning_guide_vi.md
notebooks/: 01_architecture_demo.ipynb  02_training_skeleton.ipynb  03_tuning_and_error_analysis.ipynb
src/table_ocr_pipeline/: __init__.py  config.py  detection.py  evaluation.py  ocr.py  pipeline.py  reconstruct.py  remote_structure_dataset.py  structure.py  structure_model.py  types.py  utils.py
src/table_ocr_pipeline/data/: fintabnet_loader.py
src/table_ocr_pipeline/evaluation/: evaluate_structure.py
src/table_ocr_pipeline/model/: structure_model.py
src/table_ocr_pipeline/pipeline/: detection.py  ocr.py  pipeline.py  reconstruct.py  structure.py
src/table_ocr_pipeline/utils/: config.py  runtime_env.py  types.py  utils.py
