[project]
name = "table-ocr-dl-pipeline"
version = "0.1.0"
description = "Deep Learning style pipeline for table OCR: detection, structure recognition, OCR, reconstruction."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

